chore(account): Tabs CSS Fixes
- Fix alignment of "send" "received" text
- Fix Send/Receive/Transaction tab spacing (it's uneven)
- Make default icon colors + sizes consistent with design

--- a/src/renderer/account/components/TransactionsPanel/IconTab/IconTab.scss
+++ b/src/renderer/account/components/TransactionsPanel/IconTab/IconTab.scss
@@ -4,7 +4,6 @@
   align-items: center;
 
   .icon {
-    flex: 0 0 auto;
     margin-bottom: 8px;
   }
 
